--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: php
 
-php:
-  - 7.0
-  - 7.1
-  - 7.2
+services:
+  - docker
 
-sudo: false
+sudo: required
 
-install: travis_retry composer install --no-interaction --prefer-source
-
-script: vendor/bin/phpunit
+script: make test
