--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "chenos/v8js-module-loader",
     "require": {
-        "webmozart/path-util": "^2.3"
+        "webmozart/path-util": "^2.3",
+        "zendframework/zend-di": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
