--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "scripts": {
         "test": "phpunit --colors=always",
-        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml && php-coveralls -v"
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+        "coveralls": "php-coveralls -v"
     }
 }
